--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-help-queue-example",
+  "name": "Accessibility for All",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,14 +11,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/epicodus-lessons/react-help-queue-example.git"
+    "url": "git+https://github.com/putman10/capstone-static.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/epicodus-lessons/react-help-queue-example/issues"
+    "url": "https://github.com/putman10/capstone-static/issues"
   },
-  "homepage": "https://github.com/epicodus-lessons/react-help-queue-example#readme",
+  "homepage": "https://github.com/putman10/capstone-static#readme",
   "dependencies": {
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
